# InstaCloud

./: .gitignore  Cargo.toml  README.md
docs/: Configuration Examples.md  InstaCloud.md  Supacloud.md
docs/.obsidian/: workspace.json
docs/services/: API Endpoints.md  Authentication.md  Database.md  Dedicated Machines.md  Lambda.md  Storage.md
samples/testing/: cloud.toml
samples/testing/api-endpoints/based/other/: endpoints.toml  get-other.js
samples/testing/api-endpoints/based/posts/: endpoints.old.toml  endpoints.toml  get-posts.js  get-posts.ts  post-posts.js  post-posts.ts
samples/testing/api-endpoints/based/posts2/: endpoints.toml
samples/testing/static/: index.html
src/: cloud_config.rs  main.rs
src/api/: mod.rs
src/cloud/: mod.rs
src/cloud/api/: mod.rs
src/config/: cloud_config.rs  mod.rs
src/config/api/: api_config.rs  mod.rs
src/config/loading/: mod.rs
src/config/loading/api/: mod.rs
src/stack/: lambda.rs  mod.rs  region.rs
src/stack/api/: api_definition.rs  deployment.rs  domain_name.rs  endpoint.rs  gateway.rs  mod.rs  stage.rs
src/stack/iam/: role.rs
src/stack/tf/: mod.rs
src/tf_generation/: mod.rs
src/tf_generation/api/: mod.rs
terraform/: main.tf
terraform/database/: db_instance.tf
terraform/lambda_test/: api.tf  main.tf  resource_path.tf  variables.tf
terraform/s3/: main.tf  main.tf.old
terraform/s3/website/: index.html
testing/: .gitignore  Cargo.toml  README.md  supa.toml
