[package]
edition = "2021"
name = "supacloud"
version = "0.1.0"
authors = ["Anthony Tornetta <cornchipgonecodin@gmail.com>"]

[dependencies]
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
walkdir = "2.5.0"
zip = "2.2.0"
derive_more = {version = "2.0.1", features = ["full"] }
